--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -16,25 +16,8 @@
 # limitations under the License.
 ################################################################################
 
-log4j.rootLogger=INFO, console, log, error
+log4j.rootLogger=INFO, console
 
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%p %d{yyyy-MM-dd HH:mm:ss.SSS}  %l [%c] %m%n
-
-
-log4j.appender.log=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.log.Threshold=INFO
-log4j.appender.log.DatePattern='.'yyyy-MM-dd HH:mm:ss.SSS
-log4j.appender.log.File=./log/flink_info.log
-log4j.appender.log.Append=true
-log4j.appender.log.layout=org.apache.log4j.PatternLayout
-log4j.appender.log.layout.ConversionPattern=%p %d{yyyy-MM-dd HH:mm:ss.SSS}  %l [%c] %m%n
-
-log4j.appender.error=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.error.Threshold=ERROR
-log4j.appender.error.DatePattern='.'yyyy-MM-dd HH:mm:ss.SSS
-log4j.appender.error.File=./log/flink_error.log
-log4j.appender.error.Append=true
-log4j.appender.error.layout=org.apache.log4j.PatternLayout
-log4j.appender.error.layout.ConversionPattern=%p %d{yyyy-MM-dd HH:mm:ss.SSS}  %l [%c] %m%n
