--- a/pom.xml
+++ b/pom.xml
@@ -67,13 +67,13 @@ under the License.
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-java</artifactId>
-			<version>1.9.0</version>
+			<version>${flink.version}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-streaming-java_2.11</artifactId>
-			<version>1.9.0</version>
+			<version>${flink.version}</version>
 			<scope>compile</scope>
 		</dependency>
 
@@ -81,17 +81,17 @@ under the License.
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-table-planner_2.11</artifactId>
-			<version>1.9.0</version>
+			<version>${flink.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-table-api-java-bridge_2.11</artifactId>
-			<version>1.9.0</version>
+			<version>${flink.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-table-api-scala-bridge_2.11</artifactId>
-			<version>1.9.0</version>
+			<version>${flink.version}</version>
 		</dependency>
 
 		<!--flink连接相关依赖-->
@@ -364,13 +364,13 @@ under the License.
 				<dependency>
 					<groupId>org.apache.flink</groupId>
 					<artifactId>flink-java</artifactId>
-					<version>1.9.0</version>
+					<version>${flink.version}</version>
 					<scope>compile</scope>
 				</dependency>
 				<dependency>
 					<groupId>org.apache.flink</groupId>
 					<artifactId>flink-streaming-java_2.11</artifactId>
-					<version>1.9.0</version>
+					<version>${flink.version}</version>
 					<scope>compile</scope>
 				</dependency>
 			</dependencies>
